@@ -32,7 +32,7 @@ sFilter(x, s)
 }
 \examples{
 data("crude")
-sFilter(crude,
-        "id == '127' & heading == 'DIAMOND SHAMROCK (DIA) CUTS CRUDE PRICES'")
+sFilter(crude, "id == '127' & heading == 'DIAMOND SHAMROCK (DIA) CUTS CRUDE PRICES'")
+sFilter(crude, "Places == 'usa'")
 }
 \author{Ingo Feinerer}
