@@ -1,3 +1,7 @@
+2012-12-04  Ingo Feinerer <feinerer@logic.at>
+
+	* R/filter.R (sFilter): Avoid attach() and simplify.
+
 2012-11-02  Ingo Feinerer <feinerer@logic.at>
 
 	* R/doc.R (.TextDocument): Use casts to ensure data types and to avoid
